
[package]
name = "hpt"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hpt-types = { path = "../hpt-types", version = "0.0.1" }
hpt-common = { path = "../hpt-common", version = "0.0.1" }
hpt-iterator = { path = "../hpt-iterator", version = "0.0.1" }
hpt-traits = { path = "../hpt-traits", version = "0.0.1" }
hpt-allocator = { path = "../hpt-allocator", version = "0.0.1" }
hpt-macros = { path = "../hpt-macros", version = "0.0.1" }
hpt-display = { path = "../hpt-display", version = "0.0.1" }
hpt-cudakernels = { path = "../hpt-cudakernels", version = "0.0.1", optional = true }
hpt-codegen = { path = "../hpt-codegen", version = "0.0.1", optional = true }
hpt-dataloader = { path = "../hpt-dataloader", version = "0.0.1" }
flate2 = "1.0.28"
rand_distr = "0.4.3"
# rustfft = "6.2.0"
rand = "0.8.5"
threadpool = "1.8.1"
paste = "1.0.15"
anyhow = "1.0.75"
rayon = "1.8.0"
num = "0.4.1"
duplicate = "2.0.0"
ctor = "0.2.8"
cpuid = "0.1.1"
cache-size = "0.7.0"
half = { version = "2.3.1", features = ["num-traits", "rand_distr"] }
gemm = { version = "0.18.0", features = ["rayon"] }
num_cpus = "1.16.0"
once_cell = "1.19.0"
cudarc = { version = "0.12.1", optional = true, features = [
    "cuda-12010",
    "f16",
] }
regex = { version = "1.11.1", optional = true }
bindgen_cuda = { version = "0.1.5", optional = true }
phf = { version = "0.11.1", optional = true }
xxhash-rust = { version = "0.8.12", optional = true, features = ["xxh64"] }
serde = "1.0.217"
safetensors = "0.5.0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
raw-cpuid = { version = "11.2.0", default-features = false }

[features]
default = ["track_caller", "archsimd"]
track_caller = [
    "hpt-traits/track_caller",
    "hpt-common/track_caller",
    "hpt-iterator/track_caller",
]
bound_check = ["hpt-common/bound_check", "hpt-iterator/bound_check"]
stdsimd = ["hpt-types/stdsimd", "hpt-traits/stdsimd"]
archsimd = ["hpt-types/archsimd", "hpt-traits/archsimd"]
cuda = [
    "cudarc",
    "bindgen_cuda",
    "hpt-allocator/cuda",
    "regex",
    "hpt-cudakernels/cuda",
    "hpt-common/cuda",
    "phf",
    "xxhash-rust",
    "hpt-types/cuda",
    "hpt-macros/cuda",
]
codegen = ["hpt-codegen"]

[package.metadata.rust-analyzer]
rustc_private = true
proc_macro_srv = true
