[package]
name = "tensor-common"
version = "0.1.0"
edition = "2021"

[dependencies]
tensor-types = { path = "../tensor-types" }
anyhow = "1.0.75"
getset = "0.1.2"
thiserror = "1.0.63"
serde = { version = "1.0", features = ["derive", "rc"] }
cudarc = { version = "0.12.1", optional = true, features = [
    "cuda-12010",
    "f16",
] }

[features]
track_caller = []
bound_check = []
cuda = ["cudarc"]
