[package]
name = "tensor-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
tensor-types = { path = "../tensor-types" }
tensor-common = { path = "../tensor-common" }
hashbrown = { version = "0.14.3", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"