[package]
name = "tensor-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
tensor-macros = { path = "../tensor-macros" }
tensor-types = { path = "../tensor-types" }
tensor-traits = { path = "../tensor-traits" }
tensor-common = { path = "../tensor-common" }
tensor-llvm = { path = "../tensor-llvm" }
tensor-dyn = { path = "../tensor-dyn" }
tensor-allocator = { path = "../tensor-allocator" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
getset = "0.1.2"
half = { version = "2.3.1", features = ["num-traits", "rand_distr"] }
lazy_static = "1.5.0"
llvm-sys = "=170.0.1"
paste = "1.0.15"
itertools = "0.13.0"
maplit = "1.0.2"