[package]
name = "tensor-dataloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.6.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tensor-traits = { path = "../tensor-traits" }
tensor-types = { path = "../tensor-types" }
tensor-macros = { path = "../tensor-macros" }
tensor-common = { path = "../tensor-common" }
anyhow = {version = "1.0.75" }
indicatif = "0.17.7"
flate2 = "1.0.28"
num = "0.4"
