[package]
name = "tensor-dyn"
version = "0.1.0"
edition = "2021"

[dependencies]
tensor-types = { path = "../tensor-types" }
tensor-common = { path = "../tensor-common" }
tensor-iterator = { path = "../tensor-iterator" }
tensor-traits = { path = "../tensor-traits" }
tensor-allocator = { path = "../tensor-allocator" }
tensor-macros = { path = "../tensor-macros" }
tensor-display = { path = "../tensor-display" }
rand_distr = "0.4.3"
rustfft = "6.1.0"
cudarc = { version = "0.11.6", features = ["cuda-12010"] }
wgpu = { version = "22.1.0", features = ["naga-ir"] }
rand = "0.8.5"
threadpool = "1.8.1"
anyhow = "1.0.75"
rayon = "1.8.0"
num = "0.4.1"
bytemuck = "1.16.3"
flume = "0.11.0"
aligned-vec = "0.6.1"
primal = "0.3"
ctor = "0.2.8"
wide = "0.7.28"
cpuid = "0.1.1"
cache-size = "0.7.0"
half = { version = "2.3.1", features = ["num-traits", "rand_distr"] }
gemm = { version = "0.18.0", features = ["rayon"] }
hashbrown = "0.14.5"
pollster = "0.3.0"
num_cpus = "1.16.0"
likely_stable = "0.1.2"
thiserror = "1.0.63"

[features]
default = ["track_caller"]
track_caller = [
    "tensor-traits/track_caller",
    "tensor-common/track_caller",
    "tensor-iterator/track_caller",
]
simd = []
