[package]
name = "tensor-dyn"
version = "0.1.0"
edition = "2021"

[dependencies]
tensor-types = { path = "../tensor-types" }
tensor-common = { path = "../tensor-common" }
tensor-iterator = { path = "../tensor-iterator" }
tensor-traits = { path = "../tensor-traits" }
tensor-allocator = { path = "../tensor-allocator" }
tensor-macros = { path = "../tensor-macros" }
tensor-display = { path = "../tensor-display" }
rand_distr = "0.4.3"
rustfft = "6.1.0"
rand = "0.8.5"
threadpool = "1.8.1"
paste = "1.0.15"
anyhow = "1.0.75"
rayon = "1.8.0"
num = "0.4.1"
ctor = "0.2.8"
cpuid = "0.1.1"
cache-size = "0.7.0"
half = { version = "2.3.1", features = ["num-traits", "rand_distr"] }
gemm = { version = "0.18.0", features = ["rayon"] }
num_cpus = "1.16.0"
thiserror = "1.0.63"

[dev-dependencies]
tch = "0.17.0"

[features]
default = ["track_caller"]
track_caller = [
    "tensor-traits/track_caller",
    "tensor-common/track_caller",
    "tensor-iterator/track_caller",
]
bound_check = ["tensor-common/bound_check", "tensor-iterator/bound_check"]
