[package]
name = "tensor-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.217"
rayon = "1.8.0"
tensor-dyn = { path = "../tensor-dyn", features = ["track_caller"] }
anyhow = "1.0.40"
mimalloc = "0.1.43"

[profile.release]
opt-level = 0
incremental = true
debug = true
# lto = "fat"
# codegen-units = 1

[profile.dev]
opt-level = 0
incremental = false
debug = true
# lto = "fat"
# codegen-units = 1

[profile.test]
opt-level = 0
incremental = false
debug = true
# lto = "fat"
# codegen-units = 1
