[package]
name = "tensor-iterator"
version = "0.1.0"
edition = "2021"

[dependencies]
tensor-common = { path = "../tensor-common" }
tensor-traits = { path = "../tensor-traits", default-features = false }
tensor-types = { path = "../tensor-types" }
rayon = "1.8.0"

[features]
track_caller = []
simd = []
bound_check = []