
[package]
name = "tensor-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
tensor-macros = { path = "../tensor-macros" }
tensor-common = { path = "../tensor-common" }
tensor-dyn = { path = "../tensor-dyn", features = [
    "track_caller",
    "bound_check",
] }
tensor-types = { path = "../tensor-types" }
serde_json = "1"
tch = {version = "0.17.0", features = ["download-libtorch"]}
anyhow = "1.0.75"
rayon = { version = "1.10.0", default-features = false }
paste = "1.0.15"

[profile.dev]
opt-level = 0
incremental = true
debug = true

[profile.release]
opt-level = 0
incremental = true
debug = true

[profile.test]
opt-level = 0
incremental = true
debug = true