[package]
name = "tensor-types"
version = "0.1.0"
edition = "2021"

[dependencies]
tensor-macros = { path = "../tensor-macros" }
num-complex = "0.4"
half = { version = "2.3.1", features = ["num-traits", "rand_distr"] }
paste = "1.0.15"
num-traits = "0.2.19"
sleef = { version = "0.3.2", optional = true }
libm = "0.2.11"

[dev-dependencies]
# rug = "1.16"
# rand = "0.8.5"

[features]
f16c = []
stdsimd = ["dep:sleef"]
archsimd = []
default = ["f16c", "archsimd"]